# 13_empreinte_souffrance

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  EMBED.md  README.md  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  index.html  package.json
.github/: pull_request_template.md
.github/workflows/: backend-pre-commit.yaml  backend-tests.yaml  deploy.yaml  frontend-pre-commit.yaml  frontend-tests.yaml  pre-commit.yaml  pushToPROD.yaml  status-page.yaml  tests.yml  uptime.yaml
analysis/: README.md  README_FR.md  breeding_type_identification_algo_and_stats.pptx
analysis/data/: cols_to_json.txt  new_breedings_mai_2025.csv  new_quantities_mai_2025.csv
analysis/neural_category_predictions/: .dockerignore  250604_potion.ipynb  Dockerfile  README.md  docker-compose.yml  generate_with_groq.py  pyproject.toml
analysis/neural_category_predictions/01_task_generate_datasets_from_diff_models/: Dockerfile  main.py  pyproject.toml  requirements_legacy.txt
analysis/neural_category_predictions/01_task_generate_datasets_from_diff_models/models/lewagon_ocr/: .gitignore  dont_use_requirements.txt
analysis/neural_category_predictions/01_task_generate_datasets_from_diff_models/models/lewagon_ocr/OpenFoodFactsCategorizer/: analyst.py  cleaner.py  trainer.py
analysis/neural_category_predictions/01_task_generate_datasets_from_diff_models/scripts/: generate_predictions.py  groq_classify_type_delevage.py  groq_extract_spans.py  groq_generate_synthdata_barn.py  prediction_statistics.py
analysis/neural_category_predictions/02_task_classification_model/: README.md  config.yaml  evaluation.py  main.py  model_manager.py  model_test.py  pyproject.toml
analysis/neural_category_predictions/02_task_classification_model/evaluation_results/: fold_class_accuracies.csv  span_ocr_fold_class_accuracies.csv
analysis/neural_category_predictions/02_task_classification_model/saved_model/: README.md
analysis/neural_category_predictions/02_task_classification_model/utils/: load_dataset.py
analysis/neural_category_predictions/data/: dfoeufs_with_predictions.jsonl  dfoeufs_with_predictions_with_ground_truth_with_groq.jsonl  ocr_elevage.csv  ocr_groq_spans_elevage.csv  synthetic_barn_ocr.csv
analysis/neural_category_predictions/notebooks/: 250523_creation_trame_taggage.ipynb
analysis/neural_category_predictions/scripts/: generate_predictions.py  groq_extract_spans.py  llama_extract_spans.py  load_dataset.py  potion-base-8M.py  prediction_statistics.py
analysis/scripts/: 250514_13_es_compute_from_db_calculator_and_OCR.ipynb  250614_13_es_parquet_db_to_csv.ipynb  compute_from_db_calculator_and_OCR.ipynb  compute_from_db_calculator_and_parse_OCR.ipynb  export_computed_data_to_excel.ipynb  parquet_db_to_csv.ipynb  product_data_updater.py  update_product_data.ipynb
backend/: Dockerfile  README.md  README_FR.md  Taskfile.yml  babel.cfg  pyproject.toml  requirements.txt  tox.ini
backend/app/: main.py
backend/app/api/open_food_facts/: routes.py  schemas.py
backend/app/business/open_food_facts/: breeding_type_calculator.py  egg_knowledge_panel_generator.py  egg_quantity_calculator.py  egg_weight_calculator.py  knowledge_panel.py  pain_report_calculator.py  product_type_calculator.py  quantity_calculator.py  unit_pain_loader.py
backend/app/business/open_food_facts/data/: knowledge_panel.html  knowledge_panel_project.json  knowledge_panels.json  pain_data.csv
backend/app/business/open_food_facts/html_templates/: about_the_project.html  about_the_project_panel.html  complete_footprint.html  complete_footprint_with_code.html  root_panel_complete.html  root_panel_complete_with_code.html  root_panel_multiple_breedings.html  root_panel_no_breeding.html  root_panel_no_fresh_egg.html  root_panel_no_quantity.html  root_panel_several_breedings.html
backend/app/business/open_food_facts/html_templates/en/: about_the_project.html  complete_footprint.html  complete_footprint_with_code.html  multiple_breeding_types.html  no_breeding_type.html  no_fresh_egg.html  no_quantity.html
backend/app/business/open_food_facts/html_templates/fr/: about_the_project.html  complete_footprint.html  complete_footprint_with_code.html  multiple_breeding_types.html  no_breeding_type.html  no_fresh_egg.html  no_quantity.html
backend/app/config/: cache.py  exceptions.py  http_client.py  i18n.py  logging.py  middlewares.py
backend/app/enums/open_food_facts/: breeding_type_enums.py  egg_quantity_enums.py  enums.py  pain_data.csv  panel_texts.py  product_type_enums.py
backend/app/locales/: fix_pot_charset.py
backend/app/locales/en/LC_MESSAGES/: messages.po
backend/app/locales/fr/LC_MESSAGES/: messages.po
backend/app/schemas/open_food_facts/: external.py  internal.py
backend/app/scripts/: README.md  README_FR.md  add_properties_to_folksonomy.py  es_properties_for_folksonomy.csv  export_computed_data_to_excel.py  extract_egg_products.py  extract_off_eggs.py  process_product_data.py  retrieve_laying_hens_fr_data.py  update_off_product_data.py  weight_calculator.py
backend/app/scripts/data/: cols_to_json.txt  quantity.csv
backend/tests/: conftest.py
backend/tests/app/api/open_food_facts/: test_routes.py
backend/tests/app/business/open_food_facts/: mocks.py  test_knowledge_panel.py
cicd/infrastructure/ansible/: README.md  inventory.yaml
cicd/infrastructure/traefik/: docker-compose.yaml
data/: status.json
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  lint-staged.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/__tests__/: error-page.test.tsx  toBeRenamed.test.tsx
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts  tailwind.config.ts
frontend/locales/: client.ts  en.ts  fr.ts  server.ts
frontend/public/: robot.txt
nginx/: default.conf
scripts/: add_properties_to_folksonomy.py  retrieve_laying_hens_fr_data.py  weight_calculator.py
scripts/taxonomy/: excluded_terms.txt  search_taxonomies.py
status-page/: index.html
(+209 files in other folders)
