[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "suffering-footprint"
version = "0.1.0"
description = "Suffering Footprint API"
authors = [{ name = "DataForGood" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "uvicorn>=0.34.0,<0.35",
    "requests>=2.32.3,<3",
    "fastapi>=0.115.8,<0.116",
    "pydantic>=2.10.6",
    "loguru>=0.7.2,<0.8",
    "babel>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "tox>=4.24.1,<5",
    "pre-commit>=4.1.0,<5",
    "httpx>=0.28.1,<0.29",
    "pytest-asyncio>=0.25.3,<0.26",
    "mypy>=1.15.0",
    "pandas>=2.3.1",
    "duckdb>=1.3.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["F401", "I", "W292"]  # Check for unused imports, and sort them
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
