[project]
name = "neural-category-predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "Adelia Khasanova",email = "wedance.wesing@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.82.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pip (>=25.1.1,<26.0.0)",
    "llama-cpp-python (>=0.3.9,<0.4.0)",
    "groq (>=0.29.0,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
