[project]
name = "01-task-generate-datasets-from-diff-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.29.0,<0.30.0",
    "openai>=1.82.1,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pip>=25.1.1,<26.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
]
