[project]
name = "02-task-classification-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "huggingface-hub>=0.34.4,<0.35.0",
    "model2vec[train]>=0.6.0,<0.7.0",
    "numpy>=1.24,<2",
    "pandas>=2.3.0,<3.0.0",
    "pathlib>=1.0.1,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "scikit-learn>1.6.1",
    "torch==2.1.0",
]
